<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SafeT</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="DroidLabs">by DroidLabs</string>
    <string name="SafeT">SafeT</string>
    <string name="title_activity_phone_number">PhoneNumber</string>
    <string name="Contact">Choose Contact:</string>
    <string name="add">Add Contact</string>
    <string name="title_activity_choice">Choice</string>
    <string name="taxi">Taxi</string>
    <string name="police">Cops</string>
    <string name="plus">+</string>
    <string name="camera">Camera</string>
    <string name="abc">!</string>
    <string name="title_activity_messaging">Messaging</string>

</resources>
