<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#600000"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.safet.Choice" >

    <Button
        android:id="@+id/button1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginRight="34dp"
        android:layout_marginTop="161dp"
        android:layout_toLeftOf="@+id/button2"
        android:background="@drawable/round_button"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/taxi"
        android:textColor="#000" />

    <Button
        android:id="@+id/button2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="84dp"
        android:background="@drawable/round_button"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/police"
        android:textColor="#000" />

    <Button
        android:id="@+id/button4"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/button3"
        android:layout_marginTop="48dp"
        android:layout_toLeftOf="@+id/button3"
        android:background="@drawable/round_button"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/camera"
        android:textColor="#000"
        android:textSize="12sp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/button1"
        android:layout_marginLeft="39dp"
        android:layout_toRightOf="@+id/button2"
        android:background="@drawable/round_button"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/plus"
        android:textColor="#000"
        android:textSize="27sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Button01"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/button1"
        android:layout_toLeftOf="@+id/button3"
        android:background="@drawable/round_button"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/abc"
        android:textColor="#000"
        android:textStyle="bold"
        android:textSize="45sp"
       
       />


</RelativeLayout>